// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _accessKey="V" 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _alert=true 1`] = `
<kol-input-text _alert="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _disabled=true 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="disabled has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _hint="Hint" 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-text _hide-error="">
  <template shadowrootmode="open">
    <div class="has-value hidden-error kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _readOnly=true 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error read-only text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _shortKey="S" 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
        <kol-button-wc _hidelabel="" _label="einblenden" _tabindex="-1" tabindex="0"></kol-button-wc>
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" _touched=true 1`] = `
<kol-input-text _touched="">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;

exports[`kol-input-text should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _spellCheck=true _value="Value" 1`] = `
<kol-input-text>
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-input-text msg-type-error text" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="text" value="Value">
      </div>
    </div>
  </template>
</kol-input-text>
`;
